<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookMasterEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryNamesStyle"
                android:text="@string/title" />

            <EditText
                android:id="@+id/edit_title_text_view"
                style="@style/CategoryNamesInputFieldsStyleTIP"
                android:hint="@string/hint_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryNamesStyle"
                android:text="@string/author_info" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_author_first_name_text_view"
                    style="@style/CategoryNamesInputFieldsStyleAS"
                    android:hint="@string/hint_author_first_name" />

                <EditText
                    android:id="@+id/edit_author_last_name_text_view"
                    style="@style/CategoryNamesInputFieldsStyleAS"
                    android:hint="@string/hint_author_last_name" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryNamesStyle"
                android:text="@string/isbn" />

            <EditText
                android:id="@+id/edit_isbn_text_view"
                style="@style/CategoryNamesInputFieldsStyleTIP"
                android:hint="@string/hint_isbn"
                android:inputType="number"
                android:maxLength="13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryNamesStyle"
                android:text="@string/price_without_dollar_sign" />

            <EditText
                android:id="@+id/edit_price_text_view"
                style="@style/CategoryNamesInputFieldsStyleTIP"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryNamesStyle"
                android:text="@string/quantity" />

            <Button
                android:id="@+id/editor_minus_button"
                style="@style/EditorMinusButtonStyle" />

            <EditText
                android:id="@+id/edit_quantity_text_view"
                style="@style/CategoryNamesInputFieldsStyleQ"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

            <Button
                android:id="@+id/editor_plus_button"
                style="@style/EditorPlusButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryNamesStyle"
                android:text="@string/supplier_info" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_24dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_supplier_name_text_view"
                    style="@style/CategoryNamesInputFieldsStyleAS"
                    android:hint="@string/hint_supplier_name" />

                <EditText
                    android:id="@+id/edit_supplier_phone_number_text_view"
                    style="@style/CategoryNamesInputFieldsStyleAS"
                    android:hint="@string/hint_supplier_phone_number"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/supplier_contact_button"
                    style="@style/EditorContactSupplierButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>